Made changes to props and FileJob

--- a/ProiectPPOO/bin/config.properties
+++ b/ProiectPPOO/bin/config.properties
@@ -1,7 +1,3 @@
-pathone=D:/
-pathtwo=D:/
-extensionone=.txt
-extensiontwo=.xml
-filename=test
-currency=currency
-xml=store
+createStore=D:/storeBill.txt
+XML=D:/store.xml
+currencyFile=D:/currency.txt
