--- a/ProiectPPOO/resources/config.properties
+++ b/ProiectPPOO/resources/config.properties
@@ -1,3 +1,3 @@
 createStore=D:/storeBill.txt
-XML=C:/Users/Albert/Desktop/ppoo/ProiectPPOO2/ProiectPPOO/store.xml
+XMLStore=C:/Users/Albert/Desktop/ppoo/ProiectPPOO2/ProiectPPOO/store.xml
 currencyFile=D:/currency.txt
